--- a/index.html
+++ b/index.html
@@ -2528,9 +2528,10 @@
         }
 
         .FASOTITLE:hover{
-            color:rgb(0, 71, 164);
-            box-shadow: -0.5px 3px 0.5rem 2px rgb(15, 40, 130);
+            color:rgba(13, 71, 146, 0.985);
+            box-shadow: -0.5px 3px 0.5rem 2px rgb(14, 41, 137);
             transition: 0.2s linear;
+            background: #f6f6f6;
         }
 
         .BUFASO{
@@ -3120,7 +3121,7 @@ cursor: pointer;
             height: 525px;
             padding: 10px;
             font-family: 'Barlow Condensed', sans-serif;
-            color: #222222e7;
+            color: #181818ed;
             font-size: 18px;
             text-align: justify;
             line-height: 19.5px;
@@ -3726,7 +3727,7 @@ function showSlides(n) {
             <div class="content1">
 
                 <a href="file:///C:/Users/User/Documents/Tik-Yik.html" target="_blank">
-                    <div class="k-image22" id="k-image2">
+                    <div class="k-image22">
                         <p style="text-align: left; font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255);">
                             <b>
                                 What Tiki Yiki is Meaning ? What Tiki N'Yiki is Doing ?
