--- a/index.html
+++ b/index.html
@@ -2518,8 +2518,8 @@
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            width: auto;
-            height: 105px;
+            width: 1090px;
+            height: 110px;
             padding: 7px;
             background: #f8f8f8;
             border-radius: 0.35rem;
@@ -2540,10 +2540,10 @@
           grid-template-rows: repeat(5,0.6fr);
           justify-content: center;
           justify-items: center;
-          grid-gap: 0.5rem;
+          grid-gap: 0.45rem;
           width: 100%;
           height: auto;
-          padding: 20px;
+          padding: 15px;
           background: transparent;
 
         }
@@ -3065,7 +3065,6 @@ cursor: pointer;
             color: #000;
             line-height: 19.75px;
             padding: 7px;
-            color: #000;
             border: 0.12rem solid #0353e7;
             border-radius: 0.5rem;
             box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
@@ -3121,7 +3120,7 @@ cursor: pointer;
             height: 525px;
             padding: 10px;
             font-family: 'Barlow Condensed', sans-serif;
-            color: #181818ed;
+            color: #000;
             font-size: 18px;
             text-align: justify;
             line-height: 19.5px;
