--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background: rgba(129, 129, 129, 0.964);
+            background: rgba(120, 120, 120, 0.964);
             padding: 10px;
         }
 
@@ -4006,51 +4006,187 @@ function showSlides(n) {
 
  <div class="BUFASO">
 
-    <div class="FASO"> 1. Ballé</div>
-    <div class="FASO"> 2. Bam</div>
-    <div class="FASO"> 3. Banwa</div>
-    <div class="FASO"> 4. Bazèga</div>
-    <div class="FASO"> 5. Bouguiriba</div>
-    <div class="FASO"> 6. Boulgou</div>
-    <div class="FASO"> 7. Boulkiemde</div>
-    <div class="FASO"> 8. Comoe</div>
-    <div class="FASO"> 9. Ganzourgou</div>
-    <div class="FASO"> 10. Gnagna</div>
-    <div class="FASO"> 11. Gourma</div>
-    <div class="FASO"> 12. Houet</div>
-    <div class="FASO"> 13. Ioba</div>
-    <div class="FASO"> 14. Kadiogo</div>
-    <div class="FASO"> 15. Kénédougou</div>
-    <div class="FASO"> 16. Komandjari</div>
-    <div class="FASO"> 17. Kompienga</div>
-    <div class="FASO"> 18. Kossi</div>
-    <div class="FASO"> 19. Koulpelogo</div>
-    <div class="FASO"> 20. Kouritenga</div>
-    <div class="FASO"> 21. Kourweogo</div>
-    <div class="FASO"> 22. Leraba</div>
-    <div class="FASO"> 23. Loroum</div>
-    <div class="FASO"> 24. Mouhoun</div>
-    <div class="FASO"> 25. Nahouri</div>
-    <div class="FASO"> 26. Namentenga</div>
-    <div class="FASO"> 27. Nayala</div>
-    <div class="FASO"> 28. Noumbiel</div>
-    <div class="FASO"> 29. Oubritenga</div>
-    <div class="FASO"> 30. Oudalan</div>
-    <div class="FASO"> 31. Passore</div>
-    <div class="FASO"> 32. Poni</div>
-    <div class="FASO"> 33. Sanguié</div>
-    <div class="FASO"> 34. Sanmentenga</div>
-    <div class="FASO"> 35. Seno</div>
-    <div class="FASO"> 36. Sissili </div>
-    <div class="FASO"> 37. Soum</div>
-    <div class="FASO"> 38. Sourou</div>
-    <div class="FASO"> 39. Tapoa</div>
-    <div class="FASO"> 40. Tuy</div>
-    <div class="FASO"> 41. Yagha</div>
-    <div class="FASO"> 42. Yatenga</div>
-    <div class="FASO"> 43. Ziro</div>
-    <div class="FASO"> 44. Zondoma </div>
-    <div class="FASO"> 45. Zoundweogo</div>
+    <a href="https://en.wikipedia.org/wiki/Bal%C3%A9_Province" target="_blank">
+        <div class="FASO"> 1. Ballé
+    </div>
+</a>
+
+<a href="https://en.wikipedia.org/wiki/Bam_Province" target="_blank">
+<div class="FASO"> 2. Bam
+    </div>
+</a>
+
+<a href="https://en.wikipedia.org/wiki/Banwa_Province" target="_blank">
+    <div class="FASO"> 3. Banwa
+</div>
+</a>
+<a href="https://en.wikipedia.org/wiki/Baz%C3%A8ga_Province" target="_blank">
+    <div class="FASO"> 4. Bazèga
+    </div>
+</a>
+<a href="https://en.wikipedia.org/wiki/Bougouriba_Province" target="_blank">
+<div class="FASO"> 5. Bouguiriba</div>
+</a>
+<a href="https://en.wikipedia.org/wiki/Boulgou_Province" target="_blank">
+    <div class="FASO"> 6. Boulgou
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Boulkiemd%C3%A9_Province" target="_blank">
+    <div class="FASO"> 7. Boulkiemde
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Como%C3%A9_Province" target="_blank">
+<div class="FASO"> 8. Comoe
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Ganzourgou_Province" target="_blank">
+<div class="FASO"> 9. Ganzourgou
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Gnagna_Province" target="_blank">
+<div class="FASO"> 10. Gnagna
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Ganzourgou_Province" target="_blank">
+<div class="FASO"> 11. Gourma
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Houet_Province" target="_blank"> 
+    <div class="FASO"> 12. Houet
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Ioba_Province" target="_blank">
+    <div class="FASO"> 13. Ioba
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Kadiogo_Province" target="_blank"> 
+    <div class="FASO"> 14. Kadiogo
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/K%C3%A9n%C3%A9dougou_Province" target="_blank">
+    <div class="FASO"> 15. Kénédougou
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Komandjari_Province" target="_blank">
+    <div class="FASO"> 16. Komandjari
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Kompienga_Province" target="_blank">
+<div class="FASO"> 17. Kompienga
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Kossi_Province" target="_blank">
+    <div class="FASO"> 18. Kossi
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Koulpelogo_Province" target="_blank">
+    <div class="FASO"> 19. Koulpélogo
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Kouritenga_Province" target="_blank">    
+<div class="FASO"> 20. Kouritenga
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Kourweogo_Province" target="_blank">    
+<div class="FASO"> 21. Kourweogo
+</div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Leraba_Province" target="_blank">
+    <div class="FASO"> 22. Leraba
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Loroum_Province" target="_blank">
+    <div class="FASO"> 23. Loroum
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Mouhoun_Province" target="_blank">
+    <div class="FASO"> 24. Mouhoun
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Nahouri_Province" target="_blank">
+    <div class="FASO"> 25. Nahouri
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Namentenga_Province" target="_blank">
+    <div class="FASO"> 26. Namentenga
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Nayala_Province" target="_blank">
+    <div class="FASO"> 27. Nayala
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Noumbiel_Province" target="_blank">
+    <div class="FASO"> 28. Noumbiel
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Oubritenga_Province" target="_blank">
+    <div class="FASO"> 29. Oubritenga
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Oudalan_Province" target="_blank">
+    <div class="FASO"> 30. Oudalan
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Paasore_Province" target="_blank">
+    <div class="FASO"> 31. Passore
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Passore_Province" target="_blank">
+    <div class="FASO"> 32. Poni
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Sanguié_Province" target="_blank">
+    <div class="FASO"> 33. Sanguié
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Sanmentenga_Province" target="_blank">
+    <div class="FASO"> 34. Sanmentenga
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Seno_Province" target="_blank">
+    <div class="FASO"> 35. Seno
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Sissili_Province" target="_blank">
+    <div class="FASO"> 36. Sissili 
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Soum_Province" target="_blank">
+    <div class="FASO"> 37. Soum
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Sourou_Province" target="_blank">
+    <div class="FASO"> 38. Sourou
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Tapoa_Province" target="_blank">
+    <div class="FASO"> 39. Tapoa
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Tuy_Province" target="_blank">
+    <div class="FASO"> 40. Tuy
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Yagha_Province" target="_blank">
+    <div class="FASO"> 41. Yagha
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Yatenga_Province" target="_blank">
+    <div class="FASO"> 42. Yatenga
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Ziro_Province" target="_blank">
+    <div class="FASO"> 43. Ziro
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Zondoma_Province" target="_blank">
+    <div class="FASO"> 44. Zondoma 
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Zoundweogo_Province" target="_blank">
+    <div class="FASO"> 45. Zoundweogo
+    </div>
+</a>
 
 </div>
 
