--- a/index.html
+++ b/index.html
@@ -2510,7 +2510,7 @@
             font-family: 'Merienda';
             font-size: 15.5px;
             color: rgb(42, 40, 42);
-            border: 0.13rem solid #cecece;
+            border: 0.11rem solid #cecece;
 
         }
         .FASOTITLE{
@@ -4243,26 +4243,26 @@ function showSlides(n) {
                         </div>
                     </a>
 
-                    <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
+                    <a href="https://en.wikipedia.org/wiki/Education_in_Burkina_Faso" target="_blank">
 
                         <div class="ct1">
                             Education
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://en.wikipedia.org/wiki/Health_in_Burkina_Faso" target="_blank">
                         <div class="ct2">
                             Health Care
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.wfp.org/countries/burkina-faso" target="_blank">
                         <div class="ct3">
                             Food Security
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.un.org/en/global-issues/climate-change" target="_blank">
                         <div class="ct4">
                             Climate Change
                         </div>
