--- a/index.html
+++ b/index.html
@@ -2506,11 +2506,11 @@
             width: 84%;
             height: 655px;
             padding: 10px;
-            background: transparent;
+            background: #f0f0f0;
             font-family: 'Merienda';
             font-size: 15.5px;
             color: rgb(42, 40, 42);
-            border: 0.11rem solid #cecece;
+            border: 0.15rem solid #d6d6d6da;
 
         }
         .FASOTITLE{
