--- a/index.html
+++ b/index.html
@@ -2519,18 +2519,18 @@
             justify-content: center;
             justify-items: center;
             width: 1090px;
-            height: 110px;
+            height: 120px;
             padding: 7px;
             background: #f9f9f9;
             border-radius: 0.35rem;
             box-shadow: -0.5px 1px 0.25rem 0px rgb(19, 50, 162);
-            color:#000;
+            color:#000000e8;
         }
 
         .FASOTITLE:hover{
-            color:rgba(20, 60, 112, 0.985);
-            box-shadow: -0.5px 3px 0.5rem 2px rgb(16, 42, 138);
-            transition: 0.2s linear;
+            color:rgba(17, 53, 99, 0.985);
+            box-shadow: -0.25px 4px 0.65rem 2px rgb(21, 48, 148);
+            transition: 0.18s linear;
             background: #f6f6f6;
         }
 
@@ -2557,7 +2557,7 @@ background: #fff;
 font-family: georgia;
 font-size: 15px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
-border: 1px solid rgba(33, 33, 171, 0.796);
+border: 1.5px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
 width: 150px;
 height: 65px;
@@ -2568,9 +2568,9 @@ cursor: pointer;
         .FASO:hover{
             background: #0a0a0a;
             color: #fff;
-            border: 1px solid #fff;
+            border: 1.5px solid #fff;
             border-radius: 0.5rem;
-            transition: 0.29s linear;
+            transition: 0.29s ease-in;
             box-shadow: 2px 3px 0.8rem 2px rgba(17, 17, 88, 0.796);
         }
        
@@ -3997,10 +3997,10 @@ function showSlides(n) {
 
             <a href="https://www.gouvernement.gov.bf/accueil" target="_blank">
                 <div class="FASOTITLE">
-                Burkina Faso, the land of integrity, is a landlocked country of 45 provinces, nested in the heart of West Africa. Its capital and
+                Burkina Faso, the land of integrity and a landlocked country of 45 provinces is nested in the heart of West Africa. Burkina Faso is independent in 1960 from France. Its capital and
                 main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is believed to create many jobs for people. Citizens are called Burkinabè.              
+                sector is growing and believed to create jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé.              
             </div>
         </a>
 
@@ -4612,7 +4612,7 @@ function showSlides(n) {
                             couldn't afford to sleep outside.
                             Then I went to OBM shelter in downtown Montreal. There I spent a half year and then I moved to "La Maison du Père" to wait for ny hearing. 
                             Fortunately I have been granted and applied for the permanent residency.
-                            That's why I want to share some experiences with anyone who will be in need.<a href="#">Learn more... </a>
+                            That's why I want to share some experiences with you.<a href="#">Learn more... </a>
                         </div>
 
                     </div>
@@ -4969,9 +4969,9 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        Fights For Disabled Rights
+        Fights For Disability Rights
         <br>
-        DISABILITY IS NOT DESTINY
+        DISABILITY IS NOT DESTINY * WE ARE DIFFERENTLY ABLE
         <br>
         Webmaster: Gabriel K.C, Disability Rights Activist
         <br>
