--- a/index.html
+++ b/index.html
@@ -2524,11 +2524,11 @@
             background: #f9f9f9;
             border-radius: 0.35rem;
             box-shadow: -0.5px 1px 0.25rem 0px rgb(19, 50, 162);
-            color:#000000e8;
+            color:#000;
         }
 
         .FASOTITLE:hover{
-            color:rgba(17, 53, 99, 0.985);
+            color:rgba(27, 82, 153, 0.985);
             box-shadow: -0.25px 4px 0.65rem 2px rgb(21, 48, 148);
             transition: 0.18s linear;
             background: #f6f6f6;
@@ -2543,7 +2543,7 @@
           grid-gap: 0.45rem;
           width: 100%;
           height: auto;
-          padding: 15px;
+          padding: 14.5px;
           background: transparent;
 
         }
@@ -4184,7 +4184,7 @@ function showSlides(n) {
     </div>
 </a>
 <a href= "https://en.wikipedia.org/wiki/Zoundweogo_Province" target="_blank">
-    <div class="FASO"> 45. Zoundweogo
+    <div class="FASO"> 45. Zoundwéogo
     </div>
 </a>
 
