--- a/index.html
+++ b/index.html
@@ -2524,11 +2524,11 @@
             background: #f9f9f9;
             border-radius: 0.35rem;
             box-shadow: -0.5px 1px 0.25rem 0px rgb(19, 50, 162);
-            color:#000;
+            color:#4d4d4de4;
         }
 
         .FASOTITLE:hover{
-            color:rgba(27, 82, 153, 0.985);
+            color:rgba(30, 78, 142, 0.985);
             box-shadow: -0.25px 4px 0.65rem 2px rgb(21, 48, 148);
             transition: 0.18s linear;
             background: #f6f6f6;
@@ -3997,10 +3997,11 @@ function showSlides(n) {
 
             <a href="https://www.gouvernement.gov.bf/accueil" target="_blank">
                 <div class="FASOTITLE">
-                Burkina Faso, the land of integrity and a landlocked country of 45 provinces is nested in the heart of West Africa. Burkina Faso is independent in 1960 from France. Its capital and
+                    <b>Burkina Faso, the land of integrity and a landlocked country of 45 provinces is nested in the heart of West Africa. Burkina Faso is independent in 1960 from France. Its capital and
                 main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is growing and believed to create jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé.              
+                sector is growing and believed to create jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé.       
+            </b>       
             </div>
         </a>
 
