--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         }
         
         .navbar {
-            background: rgba(7, 15, 64, 0.961);
-            height: 60px;
+            background: rgba(7, 15, 64, 0.942);
+            height: 65px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -117,7 +117,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -192,7 +192,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -269,7 +269,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -347,7 +347,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -424,7 +424,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -502,7 +502,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -578,7 +578,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -658,7 +658,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 15.7px 8px;
+            padding: 17.5px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -2187,11 +2187,11 @@
         }
 
 .DACA{
-    background: #f1f1f18a;
+    background: #f6f6f68a;
     display: grid;
     justify-content: center;
     justify-items: center;
-    font-family: georgia;
+    font-family: 'Merienda';
     font-size: 20px;
     color:rgba(2, 72, 142, 0.895);
     width: 100%;
@@ -2237,9 +2237,9 @@
             justify-items: center;
             padding-top: 20px; 
             padding-bottom: 20px;
-            font-family: georgia;
+            font-family: 'Merienda';
             font-size: 17px;
-            color:rgb(43, 49, 127);
+            color:rgb(52, 59, 157);
         }
 
         .NADA:hover{
@@ -2508,7 +2508,7 @@
             padding: 10px;
             background: #f0f0f0;
             font-family: 'Merienda';
-            font-size: 15.5px;
+            font-size: 15.75px;
             color: rgb(42, 40, 42);
             border: 0.16rem solid #d6d6d6da;
 
@@ -2519,18 +2519,18 @@
             justify-content: center;
             justify-items: center;
             width: 1090px;
-            height: 120px;
-            padding: 7px;
+            height: 125px;
+            padding: 5px;
             background: #f9f9f9;
             border-radius: 0.35rem;
             box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
-            color:#000000e8;
+            color:#000;
         }
 
         .FASOTITLE:hover{
-            color:rgb(218, 55, 0);
+            color:rgb(172, 35, 62);
             transition: 0.16s linear;
-            box-shadow: -0.25px 3.33px 0.64rem 3px rgb(20, 46, 140);
+            box-shadow: -0.25px 3.33px 0.64rem 3px rgba(20, 46, 140, 0.889);
             background: #f6f6f6;
         }
 
@@ -2554,8 +2554,8 @@ grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
 background: #fff;
-font-family: georgia;
-font-size: 15px;
+font-family: 'Merienda';
+font-size: 14px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
 border: 1.5px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
@@ -2813,7 +2813,7 @@ cursor: pointer;
     justify-content: center;
     justify-items: center;
     background: transparent;
-    font-family: 'Titillium web' sans-serif;
+    font-family: 'Merienda';
     font-size: 23px;
     background-color: #fff;
    color:rgb(0, 140, 255);
@@ -2892,7 +2892,7 @@ cursor: pointer;
             width: 103px;
             height: 45px;
             background: rgba(255, 5, 5, 0.96);
-            font-family: Impact;
+            font-family: 'Merienda';
             color: #fff;
             font-size: 17px;
             text-align: center;
@@ -2922,7 +2922,7 @@ cursor: pointer;
             width: 118px;
             height: 48px;
             background: rgba(238, 1, 238, 0.934);
-            font-family: Impact;
+            font-family: 'Merienda';
             color: darkblue;
             font-size: 20px;
             letter-spacing: 3px;
@@ -2951,7 +2951,7 @@ cursor: pointer;
             width: 189px;
             height: 75px;
             border: 4px solid rgb(252, 252, 2);
-            font-family: 'tahoma';
+            font-family: 'Merienda';
             font-size: 25px;
             background: #fff;
             color: rgb(0, 0, 0);
@@ -2978,7 +2978,7 @@ cursor: pointer;
             flex-direction: column;
             width: 200px;
             height: 75px;
-            font-family: 'tahoma';
+            font-family: 'Merienda';
             font-size: 25px;
             background: rgb(255, 25, 25);
             color: rgba(255, 255, 11, 0.982);
@@ -3013,7 +3013,7 @@ cursor: pointer;
             height: 75px;
             background: blue;
             border: 4px solid rgb(1, 1, 196) !important;
-            font-family: 'tahoma';
+            font-family: 'Merienda';
             font-size: 25px;
             color: #fff;
             border-radius: 7px;
@@ -3036,11 +3036,11 @@ cursor: pointer;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            width: 200px;
+            width: 205px;
             height: 75px;
             background: rgba(0, 134, 0, 0.996);
             border: 4px solid rgb(0, 96, 0) !important;
-            font-family: 'tahoma';
+            font-family: 'Merienda';
             font-size: 25px;
             color: rgb(255, 178, 34);
             border-radius: 7px;
@@ -3061,7 +3061,7 @@ cursor: pointer;
             height: 525px;
             background: transparent;
             font-size: 15.4px;
-            font-family: 'verdana';
+            font-family: 'Merienda';
             color: #000;
             line-height: 19.75px;
             padding: 7px;
