--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
  .Photography-content {
@@ -201,11 +201,11 @@
         .navbar:hover .Sport:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Sport-content {
@@ -278,11 +278,11 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Education-content {
@@ -356,11 +356,11 @@
         .navbar:hover .Videos:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Videos-content {
@@ -433,11 +433,11 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Contact-content {
@@ -511,11 +511,11 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Community-content {
@@ -588,11 +588,11 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .TikiYiki-content {
@@ -665,13 +665,13 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid rgb(254, 133, 5);
             border-top: none;
-            border-bottom: 0.25rem solid yellow;
-            color: rgb(0, 153, 255);
+            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            color: rgb(0, 140, 255);
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 126, 0.517);
+            background: rgba(9, 9, 133, 0.517);
         }
 
         .Disability-content {
@@ -785,7 +785,7 @@
 
         h5 {
             font-size: 22px;
-            font-family: 'bookman old style';
+            font-family: 'merienda';
             color: rgb(32, 62, 136);
             text-align: left;
             margin-top: -9%;
@@ -845,8 +845,8 @@
             border-radius: 15px;
             color: #000;
             background: rgba(9, 9, 9, 0.798);
-            font-family: 'Barlow Condensed', sans-serif;
-            font-size: 1.3rem;
+            font-family: 'Merienda';
+            font-size: 1rem;
             animation: mymove0 55s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
@@ -1321,7 +1321,7 @@
             width: 89.5%;
             height: 460px;
             overflow: hidden;
-            background-color: #ffffffc6;
+            background-color: #fff;
             border: transparent;
             margin-top: 1rem;
         }
@@ -1374,9 +1374,9 @@
             justify-content: left;
             align-items: center;
             background: transparent;
-            font-family: arial;
-            font-size: 10px;
-            color: rgb(6, 118, 255);
+            font-family: 'merienda';
+            font-size: 9.75px;
+            color: rgb(6, 72, 255);
             margin-top: 4px;
             text-align: center;
         }
@@ -3694,7 +3694,7 @@ function showSlides(n) {
                         <div class="kk">
                                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="">
                                 <figure>
-                                <figcaption style="font-family: 'arial'; font-size: 13px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
+                                <figcaption style="font-family: 'Merienda'; font-size: 13px; text-align: left;  color: rgba(37, 23, 102, 0.937)">
                                     Drumming and Courses at Tiki N'Yiki
                                 </figcaption>
                             </figure>
@@ -3748,8 +3748,8 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/20/8ul2.jpg" alt="Sunset in Burkina Faso" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
-                                Sunset In The Village Of Nagreongo [Burkina Faso]</figcation>
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
+                                Sunset Of Nagreongo In Burkina Faso</figcation>
                         </figure>
                     </div>
                 </a>
@@ -3776,7 +3776,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
                                 Supporting Preschool Kids in Burkina Faso</figcation>
                         </figure>
                     </div>
@@ -3799,7 +3799,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="CHR Ziniare" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                  Regional Hospital Facility in Ziniare
                             </figcation>
                         </figure>
@@ -3827,7 +3827,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/46/v9wi.jpg" alt="Pasta" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 Food Security Is Not A Reality For Many People</figcation>
                         </figure>
                     </div>
@@ -3856,7 +3856,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://www.zupimages.net/up/22/30/01at.jpg" alt="" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 Global Warming is seriously a Global Threat</figcation>
                         </figure>
                     </div>
@@ -3886,8 +3886,8 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/09/0p1m.jpg" alt="Disability Is Not Destiny" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
-                                Despite disabled, I managed To teach disabled kids</figcation>
+                                style="font-family: 'Merienda';font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
+                                Being a disabled teacher for disabled kids</figcation>
                         </figure>
                     </div>
                 </a>
@@ -3914,7 +3914,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="A Mask during a Festima in dédougou-Burkina Faso" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
+                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
                                 A Mask during Festima [A Festival of Masks-BF]</figcation>
                         </figure>
                     </div>
