--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(7, 15, 64, 0.942);
+            background: rgba(8, 17, 73, 0.942);
             height: 65px;
             object-fit: cover;
             z-index: 1;
@@ -75,6 +75,7 @@
             position: sticky;
             align-items: center;
             margin-top: -16px;
+            box-shadow: 0 3px 0.5rem 1px rgba(9, 15, 82, 0.711);
         }
 
         .navbar a {
