--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             position: sticky;
             align-items: center;
             margin-top: -16px;
-            box-shadow: 0 3px 0.5rem 1px rgba(9, 15, 82, 0.711);
+            box-shadow: 0 3px 0.45rem 2px rgba(9, 15, 82, 0.711);
         }
 
         .navbar a {
@@ -1376,8 +1376,8 @@
             align-items: center;
             background: transparent;
             font-family: 'merienda';
-            font-size: 9.75px;
-            color: rgb(6, 72, 255);
+            font-size: 10.5px;
+            color: rgb(0, 29, 109);
             margin-top: 4px;
             text-align: center;
         }
@@ -3717,7 +3717,7 @@ function showSlides(n) {
                 <div class="myTITLE">
                     <figure>
                 <figcaption>
-                    <b>Children are like flowers. They need us to take care of them. Teaching them has always been funny for me because I learned much back. [Gaby]</b>
+                    Children are like flowers. They need us to take care of them. Teaching them has always been funny for me because I learned much back. [Gaby]
                 </figcaption>
                 </figure>
                 </div>
