--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,7 @@
             overflow: hidden;
             background-color: #fff;
             border: transparent;
-            margin-top: 1rem;
+            margin-top: 2rem;
         }
         .Caption1{
             width: 100%;
@@ -3758,7 +3758,7 @@ function showSlides(n) {
                             </b>
                             </p>
 
-                            <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3791,7 +3791,7 @@ function showSlides(n) {
                                 And Existed Since Its Creation. It Belongs To Human-Beings To Put It Into Practical Life. That's Why Inclusiveness in
                                 Education Also Matters. It's Not A Privilege But A Right For Every Kid Including Those Who Are Disabled And/Or Different.</b> </p>
 
-                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;"><b>Inclusive Education</b> has no
+                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be a privilege but an intrinsic right.</p>
                     </div>
                 </a>
@@ -3815,7 +3815,7 @@ function showSlides(n) {
                     <div class="k-imagek3">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
-                        <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
+                        <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
                     </div>
                 </a>
 
@@ -3839,7 +3839,7 @@ function showSlides(n) {
                     <div class="k-imagek4">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Fix Food Insecurity Worldwide?</b> </p>
-                            <p style="font-family: Georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">While in some regions
+                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
                             hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
@@ -3868,7 +3868,7 @@ function showSlides(n) {
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Climate Change Is a Big Threat To Human-Beings And To Earth. Climate Change is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes And Volcanos Around The World. There Is No Doubt that Climate Change Has More Endangered Earth Than Never Before. 
                                 But Human-Being Has Provoked It Through His Continual Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
-                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">
+                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         
                             | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97)">Earthquakes</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Tsunamis</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Floodings</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Wildfires</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Volcanos</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Hurricanes</em> |
@@ -3899,7 +3899,7 @@ function showSlides(n) {
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Anyone To Get Their Needs And Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
-                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">As a disabled person, I experienced
+                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing lots <b>discriminations</b> everywhere. It's too tough, heartbreaking and challenging but It's also learning . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
@@ -3929,7 +3929,7 @@ function showSlides(n) {
                                 Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
                                 To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve It</b> </p>
-                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks that happens every year in Dedougou, a city of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
+                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks that happens every year in Dedougou, a city of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
                             </p>
                     </div>
                 </a>
